--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.13",
     "@mui/x-data-grid": "^5.17.24",
+    "@mui/x-date-pickers": "^5.0.20",
     "@reduxjs/toolkit": "^1.9.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "axios": "^1.2.1",
+    "dayjs": "^1.11.10",
     "formik": "^2.2.9",
     "moment": "^2.29.4",
     "react": "^18.2.0",
